--- a/sparse_attention_heads/train.cfg
+++ b/sparse_attention_heads/train.cfg
@@ -2,8 +2,8 @@
 vocab_size = 30522
 n_unused = 993
 max_len = 64
-pad_token = "[PAD]"
 dropout_embed = 0.05
+# can define custom tokens here: PAD, MASK, CLS, SEP
 
 
 [transformer]
@@ -14,3 +14,6 @@ n_active = 8
 d_attn = 128
 d_ff = 1048
 dropout = 0.1
+
+[training]
+task = "clm" # mlm, clm, or clm_rand (takes a random subset from the start to vary values)
