--- a/sparse_attention_heads/train.cfg
+++ b/sparse_attention_heads/train.cfg
@@ -1,5 +1,6 @@
 [vocab]
 vocab_size = 30522
+vocab_path = "../vocab/vocab.txt"
 n_unused = 993
 max_len = 64
 dropout_embed = 0.05
@@ -17,3 +18,5 @@ dropout = 0.1
 
 [training]
 task = "clm" # mlm, clm, or clm_rand (takes a random subset from the start to vary values)
+batch_size = 64
+n_epochs = 3
