--- a/sparse_attention_heads/train.cfg
+++ b/sparse_attention_heads/train.cfg
@@ -16,7 +16,8 @@ d_attn = 128
 d_ff = 1048
 dropout = 0.1
 
-[training]
+[train]
 task = "clm" # mlm, clm, or clm_rand (takes a random subset from the start to vary values)
 batch_size = 64
+val_size = 4
 n_epochs = 3
