--- a/sparse_attention_heads/train.cfg
+++ b/sparse_attention_heads/train.cfg
@@ -1,6 +1,6 @@
 [vocab]
 vocab_size = 30522
-vocab_path = "../vocab/vocab.txt"
+vocab_path = ../vocab/vocab.txt
 n_unused = 993
 max_len = 64
 dropout_embed = 0.05
@@ -17,7 +17,7 @@ d_ff = 1048
 dropout = 0.1
 
 [train]
-task = "clm" # mlm, clm, or clm_rand (takes a random subset from the start to vary values)
+task = clm # mlm, clm, or clm_rand (takes a random subset from the start to vary values)
 batch_size = 64
 val_size = 4
 n_epochs = 3
