--- a/sparse_attention_heads/train.cfg
+++ b/sparse_attention_heads/train.cfg
@@ -15,6 +15,7 @@ n_active = 4
 d_attn = 128
 d_ff = 1024
 dropout = 0.1
+route_type = sum
 
 [train]
 task = clm # mlm, clm, or clm_rand (takes a random subset from the start to vary values)
