--- a/sparse_attention_heads/train.cfg
+++ b/sparse_attention_heads/train.cfg
@@ -17,9 +17,13 @@ d_ff = 1024
 dropout = 0.1
 route_type = sum
 
+noise = 0.05
+noise_step = 0.5
+
 [train]
 task = clm # mlm, clm, or clm_rand (takes a random subset from the start to vary values)
 batch_size = 64
 val_size = 4
 n_epochs = 3
 lr = 0.0003
+val_step = 20
